--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,9 @@ DB_DATABASE=tienda_gamer
 
 # JWT Secret
 JWT_SECRET=your_jwt_secret_key
+
+# Configuración para envío de correos
+EMAIL_USER=kawiim98@gmail.com
+EMAIL_PASSWORD=aqpp tptx kkhe aiyd
+# Nota: para Gmail, debes usar una contraseña de aplicación, no tu contraseña normal
+# Genera una contraseña de aplicación en: https://myaccount.google.com/security -> Contraseñas de aplicación
