--- a/backend/.env
+++ b/backend/.env
@@ -11,5 +11,5 @@ DB_DATABASE=tienda_gamer
 JWT_SECRET=your_jwt_secret_key
 
 # Configuración para envío de correos
-EMAIL_USER=tu-correo@gmail.com
-EMAIL_PASSWORD=tu-contraseña-de-aplicación
+EMAIL_USER=kawiim98@gmail.com
+EMAIL_PASSWORD=aqpp tptx kkhe aiyd
